# segmock

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/segmock/: __init__.py  __main__.py  app.py  app.tcss  blocking_screen.py  cache.py  clock.py  stopwatch.py  version.py
src/segmock/font/: 7segment.flf
